# simple-token-bucket

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
docs/: api.rst  conf.py  contributing.rst  index.rst
simple_token_bucket/: __init__.py
simple_token_bucket/backends/: __init__.py  redis.py
tests/: test_redis_backend.py
